Tracefoss 677  - Updating model notification (#65)
* Adding the target date field and modifying the related classes.

Branch for a subtask TRACEFOSS-608 - Set and show notification target date

* Correcting the tests

* Using Stream.toList()

* feature(merge): TRACEFOSS-677 merge fix.

* feature(merge): TRACEFOSS-677 merge fix.

* feature(merge): TRACEFOSS-677 merge fix.

---------

Co-authored-by: Maximilian Wesener <maximilian.wesener@doubleslash.de>